--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
     <div class="container">
         <div class="hero">
             <div class="intro">
-                <h1>This website is awesome</h1>
-                <p>This is the subtext that goes under the main title. It is smaller and lower contrast</p>
+                <h1>Unlock your true potential</h1>
+                <p>This is the subtext that goes under the main title. It is smaller and lower contrast and tends to describe the site.</p>
                 <button class="button1">Sign Up</button>
             </div>
             <div class="image">This is a sample image</div>
@@ -42,7 +42,7 @@
             </div>
         </div>
         <div class="quote">
-            <h2>Here is an inspirational quote. How inspirational you want it to be is up to you</h2>
+            <h2>Embrace the journey of growth and transformation; every step forward is a testament to your true potential</h2>
         </div>
         <div class="action">
             <div class="smallcontainer">
