added css and html elements to call to action section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         </div>
         <div class="action">
             <div class="smallcontainer">
-
+                <h3>Call to action! It's time!</h3>
+                <p>Sign up by pressing the button over there!</p>
                 <button class="button2">Sign Up</button>
             </div>
         </div>
