Added elements to the infomation section and fixed the css for info and button sections

--- a/index.html
+++ b/index.html
@@ -27,26 +27,33 @@
             </div>
             <div class="image">This is a sample image</div>
         </div>
+        <div class="section2">
+            <h3>Some random information</h3>
         <div class="information">
             <div class="info">
+                <div class="box"></div>
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
             <div class="info">
+                <div class="box"></div>
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
             <div class="info">
+                <div class="box"></div>
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
             <div class="info">
+                <div class="box"></div>
                 <div class="text">This is some subtext under an illustration or image</div>
             </div>
+        </div>
         </div>
         <div class="quote">
             <h2>Embrace the journey of growth and transformation; every step forward is a testament to your true potential</h2>
         </div>
         <div class="action">
             <div class="smallcontainer">
-                <h3>Call to action! It's time!</h3>
+                <h4>Call to action! It's time!</h3>
                 <p>Sign up by pressing the button over there!</p>
                 <button class="button2">Sign Up</button>
             </div>
