--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="image">This is a sample image</div>
         </div>
         <div class="section2">
-            <h3>Some random information</h3>
+            <h2>Some random information</h2>
         <div class="information">
             <div class="info">
                 <div class="box"></div>
@@ -49,13 +49,19 @@
         </div>
         </div>
         <div class="quote">
-            <h2>Embrace the journey of growth and transformation; every step forward is a testament to your true potential</h2>
+            <h3>Welcome to a space where self-fulfillment begins and confidence thrives. Embrace your journey with the belief that you hold the power 
+                to achieve greatness. Together, let's unlock your true potential and celebrate your unique path to success
+            </h3>
         </div>
-        <div class="action">
+        <div>
             <div class="smallcontainer">
-                <h4>Call to action! It's time!</h3>
+                <div class="action">
+                <h4>Call to action! It's time!</h4>
                 <p>Sign up by pressing the button over there!</p>
+                </div>
+                <div class="button2container">
                 <button class="button2">Sign Up</button>
+                </div>
             </div>
         </div>
     </div>
